<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_Name"
        android:text="@string/tv_Name"
        android:paddingTop="10dp"
        android:textSize="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ET_Name"
        android:inputType="text"
        android:layout_below="@+id/tv_Name"
        android:paddingTop="10dp"/>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tv_Email"
    android:text="@string/tv_Email"
    android:paddingTop="10dp"
    android:textSize="20sp"
    android:layout_below="@+id/ET_Name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ET_Email"
        android:inputType="textWebEmailAddress"
        android:layout_below="@+id/tv_Email"
        android:paddingTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_UserName"
        android:text="@string/tv_UserName"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:layout_below="@+id/ET_Email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ET_UserName"
        android:inputType="text"
        android:layout_below="@+id/tv_UserName"
        android:paddingTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_Password"
        android:text="@string/tv_Password"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:layout_below="@+id/ET_UserName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ET_Password"
        android:inputType="textPassword"
        android:layout_below="@+id/tv_Password"
        android:paddingTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_ConfirmPassword"
        android:text="@string/tv_ConfirmPassword"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:layout_below="@+id/ET_Password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ET_ConfirmPassword"
        android:inputType="textPassword"
        android:layout_below="@+id/tv_ConfirmPassword"
        android:paddingTop="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignUp"
        android:onClick="SignUp"
        android:text="@string/btn_SigUp"
        android:layout_below="@+id/ET_ConfirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />
</RelativeLayout>
