<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:gravity="top"
    android:layout_gravity="center"
    tools:context="com.a_hamoud.loginapp.MainActivity">

       <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_UserName"
        android:textSize="20sp"
           android:paddingTop="10dp"

        />

    <EditText
        android:id="@+id/ET_UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserName"
        android:paddingTop="10dp"
         android:inputType="text"
        />
    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_Password"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:layout_below="@+id/ET_UserName"
        />

    <EditText
        android:id="@+id/ET_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPassword"
        android:paddingTop="10dp"
        android:inputType="textPassword"
        />
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/btnLoging"
    android:text="@string/btn_Login"
    android:gravity="center"
    android:layout_below="@+id/ET_Password"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="47dp"
    android:onClick="onBtnLoginInClick"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignUp"
        android:text="@string/btn_SigUp"
        android:gravity="center"
        android:layout_below="@+id/btnLoging"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:onClick="onBtnSignUoClick"/>
</RelativeLayout>
